# Interpretator

./: CMakeLists.txt  Executor.cpp  Executor.h  Identifier.cpp  Identifier.h  Interpretator.cpp  Interpretator.h  Interpretator_Limits.h  Label.cpp  Label.h  Lexeme.cpp  Lexeme.h  Makefile  Parser.cpp  Parser.h  Poliz.cpp  Poliz.h  Scanner.cpp  Scanner.h  Table_identifier.cpp  Table_identifier.h  Table_label.cpp  Table_label.h  Table_string.cpp  Table_string.h  Type_of_lexeme.cpp  Type_of_lexeme.h  main.cpp  test.cpp  testAll.sh
Readme/: Grammar.txt
tests/: fact.txt  test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  test_0.txt
